# ir-pipeline-template

./: .gitignore  init_repo.py  init_repo.sh  mkdocs.yml  pyproject.toml  requirements.txt  run.py
configs/: config.yaml
docs/: reference.md
notebooks/: Pipeline Introduction.ipynb  exploratory.ipynb  init_repo.ipynb  pell_accepts.ipynb  pell_accepts_scratch.ipynb
scripts/: gen_ref_pages.py
src/ir_pell_accepts/: headcount_calcs.py  helper.py  io_utils.py  output.py  tables_for_carol.py
src/ir_pell_accepts.egg-info/: PKG-INFO  SOURCES.txt
