[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ir_pell_accepts"
version = "0.3.3"
description = "0.3.1 reorganizes the output to be 3 columns. This allows for outputting metrics across different fall cohorts all together in a clear way (ie grad4/6 year and retention alongside the current fall cohort metrics). 0.3.2 outputs a sheet into an existing file. 0.3.0 addes a function for creating a table for Carol to use to input First gen status and pell recipient status"

[tool.setuptools.packages.find]
where = ["src"]
